--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: https://example.com
+baseURL: https://learning-r.netlify.app/
 languageCode: en-us
 defaultContentLanguage: en
 title: Cupper
