--- a/config.yaml
+++ b/config.yaml
@@ -17,7 +17,7 @@ imaging:
   quality: 99
 
 params:
-  description: Variaty of instructions for using R in Machine Learning. See [Introduction to Statistical Learning Series](https://www.youtube.com/playlist?list=PLOg0ngHtcqbPTlZzRHA2ocQZqB1D_qZ5V) for theorical background.
+  description: Variaty of instructions for using *R* in Machine Learning. See [Introduction to Statistical Learning Series](https://www.youtube.com/playlist?list=PLOg0ngHtcqbPTlZzRHA2ocQZqB1D_qZ5V) for theorical background.
   homeMetaContent: An accessibility-friendly Hugo theme, ported from the original Cupper project.
   footer: [Ramin Ala](https://www.linkedin.com/in/ramin-ala-6645b3188/?originalSubdomain=ca).
   # For more date formats see https://gohugo.io/functions/format/
