--- a/config.yaml
+++ b/config.yaml
@@ -19,7 +19,7 @@ imaging:
 params:
   description: Variaty of instructions for using *R* in Machine Learning. See [Introduction to Statistical Learning Series](https://www.youtube.com/playlist?list=PLOg0ngHtcqbPTlZzRHA2ocQZqB1D_qZ5V) for theorical background.
   homeMetaContent: An accessibility-friendly Hugo theme, ported from the original Cupper project.
-  footer: Made with [Hugo]. Themed by [Cupper]. Deployed to [Netlify].
+  footer: Made with [Hugo].
   # For more date formats see https://gohugo.io/functions/format/
   dateFormat: Jan 2, 2006
   codePenUser: someUser
